# PortAudioOnPC

./: Readme.md
C_code/: CMakeLists.txt  main.c  readme.md
C_code/inc/: main.h  portaudio.h
python/: pyaudio_algorithm.py  readme.md
